// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkHorizontalNavItem should render correctly 1`] = `
<div
  className="bpk-horizontal-nav__item"
>
  <button
    aria-selected="false"
    className="bpk-horizontal-nav__link"
    disabled={false}
    role="tab"
    type="button"
  >
    My nav item content
  </button>
</div>
`;

exports[`BpkHorizontalNavItem should render correctly with "disabled" prop 1`] = `
<div
  className="bpk-horizontal-nav__item"
>
  <button
    aria-selected="false"
    className="bpk-horizontal-nav__link bpk-horizontal-nav__link--disabled"
    disabled={true}
    role="tab"
    type="button"
  >
    My nav item content
  </button>
</div>
`;

exports[`BpkHorizontalNavItem should render correctly with "selected" prop 1`] = `
<div
  className="bpk-horizontal-nav__item"
>
  <button
    aria-selected="true"
    className="bpk-horizontal-nav__link bpk-horizontal-nav__link--selected"
    disabled={false}
    role="tab"
    type="button"
  >
    My nav item content
  </button>
</div>
`;

exports[`BpkHorizontalNavItem should render correctly with "spaceAround" prop 1`] = `
<div
  className="bpk-horizontal-nav__item bpk-horizontal-nav__item--space-around"
>
  <button
    aria-selected="false"
    className="bpk-horizontal-nav__link"
    disabled={false}
    role="tab"
    type="button"
  >
    My nav item content.
  </button>
</div>
`;

exports[`BpkHorizontalNavItem should render correctly with an "href" prop 1`] = `
<div
  className="bpk-horizontal-nav__item"
>
  <a
    aria-disabled={false}
    aria-selected="false"
    className="bpk-horizontal-nav__link"
    href="#"
    role="tab"
  >
    My nav item content
  </a>
</div>
`;

exports[`BpkHorizontalNavItem should render correctly with arbitrary props 1`] = `
<div
  className="bpk-horizontal-nav__item"
>
  <button
    aria-selected="false"
    className="bpk-horizontal-nav__link"
    data-arbitrary-1="arbirary-value-1"
    data-arbitrary-2="arbirary-value-2"
    disabled={false}
    role="tab"
    type="button"
  >
    My nav content.
  </button>
</div>
`;

exports[`BpkHorizontalNavItem should render correctly with custom "className" prop 1`] = `
<div
  className="bpk-horizontal-nav__item"
>
  <button
    aria-selected="false"
    className="bpk-horizontal-nav__link my-custom-class"
    disabled={false}
    role="tab"
    type="button"
  >
    My nav item content
  </button>
</div>
`;
